--- a/style.css
+++ b/style.css
@@ -2,12 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
 body{
     font-family: 'Times New Roman', Times, serif;
 }
-
-
 
 .menu{
     width: 100%;
@@ -16,63 +13,91 @@ body{
     border-bottom:double 5px #F9F295;
     position: sticky;
     top: 0px;
-    
-
-    
+    z-index: 50; 
 }
 
 .menu__list{
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
-    
+    width: 100%;
+    height: 90px;
+   
     display: inline-block;
 }
 
+.menu__list--01{
+    width: 70px;
+    height: 70px;
+   
+    margin-left: 30px;
+    margin-right: 265px;
+   
+    padding: 2px 2px 2px 2px;
+    
+    text-align: center;
+
+    border: #F9F295 solid;
+    display: inline-block;
+    position: relative;
+    bottom: 3px;
+
+}
+
+.menu__list--middle{
+    width: 150px;
+    height: 20px;
+   
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 2px;
+    margin-right: 2px;
+   
+    padding: 2px 2px 2px 2px;
+    
+    text-align: center;
+   
+    
+    display: inline-block;
+    position: relative;
+    left: 40px;
+    top: 25px;
+}
+
+.zoom:hover{
+    transform: scale(1.2,1.2);
+}
 
 .menu__list--decoration{
     list-style-type: none;
     text-decoration: none;
     color: white;
-    font-size: medium;
+    font-size: 16px;
     font-weight: bold;
+   
 }
-
 
 .menu__list--decoration:hover{
     color: #F9F295;
-    
     text-decoration: underline;
     
+    
+    
 }
-
-
-
-.list__padding--logo{
-    padding-top: 30px;
-    padding-right: 355px;
-    padding-bottom: 5px;
-    padding-left: 20px;
-}
-
-.list__padding{
-    padding-top: 40px;
-    padding-right: 10px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-}
-
-.list__padding--distinct{
-    padding-top: 40px;
-    padding-right: 10px;
-    padding-bottom: 5px;
-    padding-left: 365px;
-}
-
 
 .menu__item{
+    width: 60px;
+    height: 30px;
     display: inline-block;
     position: relative;
+    top: 10px;
+    bottom: 20px;
+    right: 30px; 
+    left: 165px;
+    margin-right: 30px;
+    margin-left: 200px;
+    padding: 4px 2px 2px 2px;
+
+    text-align: center;
+
+    
     
     
    
@@ -82,11 +107,17 @@ body{
     position: absolute;
     display: none;
     width: 120px;
-    height: 150px;
-    left: 325px;
+    height: 200px;
+    
     list-style: none;
     text-decoration: none;
-    background-image: linear-gradient(45deg, black, white);
+    background-color: rgba(0, 0, 0, 0.426);
+    left: 10px;
+   
+    border-right: outset 5px rgba(67, 67, 67, 0.092);
+    border-bottom: outset 5px rgba(67, 67, 67, 0.092);
+    border-radius: 2px;
+   
 }
 
 .submenu__item{
@@ -97,9 +128,64 @@ body{
     display: block;
 }
 
-main{
+.container{
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.225);
+}
+
+
+.spotlight__right{
+    width: 550px;
+    position: relative;
+    left: 790px;
+    bottom: 140px;
+    transform: rotate(24deg);
+    animation-duration: 5s;
+    animation-name: spotlight;
+    animation-iteration-count: 1;  
+    z-index: 5;  
+}
+
+@keyframes spotlight{
+    0% {opacity: 0;}
+    25% {opacity: 0.25;}
+    50% {opacity: 0.5;}
+    75% {opacity: 0.75;}
+    100% {opacity: 1;}
+}
+
+.spotlight__left{
+    width: 550px;
+    position: relative;
+    left: 220px;
+    bottom: 980px;
+    transform: rotate(-80deg);
+    animation-duration: 5s;
+
+    animation-name: spotlight;
+    animation-iteration-count: 1;
+    z-index: 5;
     
-    background-color: rgba(0, 0, 0, 0.080)
+}
+
+.stage{
+    width: 400px;
+    height: 400px;
+    
+    position: relative;
+    bottom: 1355px;
+    left: 550px;
+    z-index: 5;
+
+}
+
+.home__main__margin{
+   
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 
 footer{
@@ -108,6 +194,24 @@ footer{
     color: white;
     background-color: black;
     display: inline-block;
-    
+    border-top: double 5px #F9F295; 
+    z-index: 50;
+}
+
+.video{
+    width: 610px;
+    height: 355px;
+    border: #F9F295 6px double;
+    background-color: black;
+    position: relative;
+    bottom: 1850px;
+    left: 440px;
+}
+
+.position{
+    position: absolute;
+    left: 45px;
+    top: 40px;
+    z-index: 6;
     
 }
